# morph_analysis

./: HW10.ipynb  HW11.ipynb  HW12.ipynb  HW6.ipynb  HW7.ipynb  HW8.ipynb  HW9.ipynb  matr8.npy  pyproject.toml  Настя.ipynb
.ipynb_checkpoints/: HW4-checkpoint.py  HW5-checkpoint.ipynb
