[tool.poetry]
name = "morph-analysis"
version = "0.1.0"
description = ""
authors = ["Ваше Имя <kc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.26.1"
pandas = "^2.1.1"
jupyter = "^1.0.0"
lab = "^8.0"
matplotlib = "^3.8.0"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
